@@ -143,12 +143,11 @@ ol_player_amarok1_get_capacity ()
   return 0;
 }
 
-OlPlayerController*
-ol_player_amarok1_get_controller ()
+struct OlPlayer*
+ol_player_amarok1_get ()
 {
-  printf ("%s\n",
-          __FUNCTION__);
-  OlPlayerController *controller = ol_player_new ("Amarok 1.4");
+  ol_log_func ();
+  struct OlPlayer *controller = ol_player_new ("Amarok 1.4");
   ol_player_set_cmd (controller, "amarok");
   controller->get_music_info = ol_player_amarok1_get_music_info;
   controller->get_activated = ol_player_amarok1_get_activated;
